fixed spacing on header in mobile

--- a/styles.css/header.css
+++ b/styles.css/header.css
@@ -17,7 +17,6 @@
 /* Header (navigation bar) */
  header {
     width: 100%;
-    padding: 10px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -61,9 +60,8 @@ height: auto;
 @media (max-width: 768px) {
   .header {
     flex-direction: column;
-    padding: 10px 20px;
-  }
 
+  }
   nav {
     display: flex;
     flex-wrap: wrap;
@@ -107,7 +105,7 @@ height: auto;
 
 body {
   margin: 0;
-  padding-top: 90px; /* adjust to your header height */
+  padding-top: 90px; 
 }
 
 /* Mobile layout */
